Requests&Limits/app1-service.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: omnifood-app-service
spec: 
  type: ClusterIP
  selector: 
     app: omnifood
  ports:
    - port: 80
      targetPort: 80
