Requests&Limits/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omnifood-app-ingres
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: omnifood-app-service
            port: 
              number: 80
